tests/fixtures/invalid/oct_bytes.py
# Cannot call oct() with Bytes
x = oct(b"hello")
